{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 228,
  "lineage": "4c5e20d1-280f-8085-c20c-4ad92a04329f",
  "resources": [
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-dev-cli/ca2b4bcf8b69caf6",
            "arn_suffix": "app/alb-dev-cli/ca2b4bcf8b69caf6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-dev-cli-401523476.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-dev-cli/ca2b4bcf8b69caf6",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-dev-cli",
            "security_groups": [
              "sg-043b13cb48d6123b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01937523aca81b2cb"
              },
              {
                "subnet_id": "subnet-0e116d196a39e3494"
              }
            ],
            "subnets": [
              "subnet-01937523aca81b2cb",
              "subnet-0e116d196a39e3494"
            ],
            "vpc_id": "vpc-0443ee53ac2366737",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:listener/app/alb-dev-cli/ca2b4bcf8b69caf6/8280839f611bf5e4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-c-b/03fe881f25cae261",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:listener/app/alb-dev-cli/ca2b4bcf8b69caf6/8280839f611bf5e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-dev-cli/ca2b4bcf8b69caf6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_client.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg",
            "module.target_group_client_blue.aws_alb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_server",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-dev-ser/3c27a91174453dc5",
            "arn_suffix": "app/alb-dev-ser/3c27a91174453dc5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-dev-ser-2009328785.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-dev-ser/3c27a91174453dc5",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-dev-ser",
            "security_groups": [
              "sg-0c740ed9856f62153"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01937523aca81b2cb"
              },
              {
                "subnet_id": "subnet-0e116d196a39e3494"
              }
            ],
            "subnets": [
              "subnet-01937523aca81b2cb",
              "subnet-0e116d196a39e3494"
            ],
            "vpc_id": "vpc-0443ee53ac2366737",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_server.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_server",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:listener/app/alb-dev-ser/3c27a91174453dc5/4e4f69179722999f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-s-b/dd3aa6b30c820812",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:listener/app/alb-dev-ser/3c27a91174453dc5/4e4f69179722999f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-dev-ser/3c27a91174453dc5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_server.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_server.aws_security_group.sg",
            "module.target_group_server_blue.aws_alb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:route-table/rtb-07c6bb92f6ff628ed",
            "default_route_table_id": "rtb-07c6bb92f6ff628ed",
            "id": "rtb-07c6bb92f6ff628ed",
            "owner_id": "141084936975",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098f1c21a7f03e9f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt_dev"
            },
            "tags_all": {
              "Name": "public_rt_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063e2114ae2d8405a",
            "domain": "vpc",
            "id": "eipalloc-063e2114ae2d8405a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-211-216-8.compute-1.amazonaws.com",
            "public_ip": "18.211.216.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-dev"
            },
            "tags_all": {
              "Name": "eip-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:internet-gateway/igw-098f1c21a7f03e9f2",
            "id": "igw-098f1c21a7f03e9f2",
            "owner_id": "141084936975",
            "tags": {
              "Name": "igw_dev"
            },
            "tags_all": {
              "Name": "igw_dev"
            },
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063e2114ae2d8405a",
            "connectivity_type": "public",
            "id": "nat-0b83888f9c280ea64",
            "network_interface_id": "eni-0a3a20309d401e640",
            "private_ip": "10.120.2.68",
            "public_ip": "18.211.216.8",
            "subnet_id": "subnet-01937523aca81b2cb",
            "tags": {
              "Name": "nat_dev"
            },
            "tags_all": {
              "Name": "nat_dev"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:route-table/rtb-0686f7e77c5c73bc2",
            "id": "rtb-0686f7e77c5c73bc2",
            "owner_id": "141084936975",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b83888f9c280ea64",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_dev"
            },
            "tags_all": {
              "Name": "private_rt_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079650ca748f2ae63",
            "route_table_id": "rtb-0686f7e77c5c73bc2",
            "subnet_id": "subnet-029e651fb1b6ed10f"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020836abd3ad62c65",
            "route_table_id": "rtb-0686f7e77c5c73bc2",
            "subnet_id": "subnet-0aa539b362bb03436"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056075cc4ed924685",
            "route_table_id": "rtb-0686f7e77c5c73bc2",
            "subnet_id": "subnet-0c8759cc9fdbb5a07"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0008c0d3a375071ba",
            "route_table_id": "rtb-0686f7e77c5c73bc2",
            "subnet_id": "subnet-0ad99af0dad7cf4c7"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_pub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9adbea038ef1d90",
            "route_table_id": "rtb-07c6bb92f6ff628ed",
            "subnet_id": "subnet-01937523aca81b2cb"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4b4528b27bf07fd",
            "route_table_id": "rtb-07c6bb92f6ff628ed",
            "subnet_id": "subnet-0e116d196a39e3494"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-029e651fb1b6ed10f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.6.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029e651fb1b6ed10f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_0_dev"
            },
            "tags_all": {
              "Name": "private_subnet_client_0_dev"
            },
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-0aa539b362bb03436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.120.8.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa539b362bb03436",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_1_dev"
            },
            "tags_all": {
              "Name": "private_subnet_client_1_dev"
            },
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-0c8759cc9fdbb5a07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.10.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8759cc9fdbb5a07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_0_dev"
            },
            "tags_all": {
              "Name": "private_subnet_server_0_dev"
            },
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-0ad99af0dad7cf4c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.120.12.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad99af0dad7cf4c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_1_dev"
            },
            "tags_all": {
              "Name": "private_subnet_server_1_dev"
            },
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-01937523aca81b2cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01937523aca81b2cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_0_dev"
            },
            "tags_all": {
              "Name": "public_subnet_0_dev"
            },
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-0e116d196a39e3494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.120.4.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e116d196a39e3494",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1_dev"
            },
            "tags_all": {
              "Name": "public_subnet_1_dev"
            },
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:vpc/vpc-0443ee53ac2366737",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-0cd4720571aef521b",
            "default_route_table_id": "rtb-07c6bb92f6ff628ed",
            "default_security_group_id": "sg-08ceca60130114c89",
            "dhcp_options_id": "dopt-0e429ac585a62c85d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0443ee53ac2366737",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c6bb92f6ff628ed",
            "owner_id": "141084936975",
            "tags": {
              "Name": "vpc_dev"
            },
            "tags_all": {
              "Name": "vpc_dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:security-group/sg-043b13cb48d6123b5",
            "description": "Controls access to the client ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043b13cb48d6123b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-dev-client",
            "name_prefix": "",
            "owner_id": "141084936975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-dev-client"
            },
            "tags_all": {
              "Name": "alb-dev-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:security-group/sg-0c740ed9856f62153",
            "description": "Controls access to the server ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c740ed9856f62153",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-dev-server",
            "name_prefix": "",
            "owner_id": "141084936975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-dev-server"
            },
            "tags_all": {
              "Name": "alb-dev-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_ecs_task_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:security-group/sg-03577ad662dc95d95",
            "description": "Controls access to the client ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03577ad662dc95d95",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043b13cb48d6123b5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-task-dev-client",
            "name_prefix": "",
            "owner_id": "141084936975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-dev-client"
            },
            "tags_all": {
              "Name": "ecs-task-dev-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.security_group_alb_client.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_ecs_task_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:security-group/sg-030bee629dd0dc975",
            "description": "Controls access to the server ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030bee629dd0dc975",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c740ed9856f62153"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "ecs-task-dev-server",
            "name_prefix": "",
            "owner_id": "141084936975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-dev-server"
            },
            "tags_all": {
              "Name": "ecs-task-dev-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.security_group_alb_server.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_blue",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-c-b/03fe881f25cae261",
            "arn_suffix": "targetgroup/tg-dev-c-b/03fe881f25cae261",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-c-b/03fe881f25cae261",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-c-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_green",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-c-g/e88e05709ad0f635",
            "arn_suffix": "targetgroup/tg-dev-c-g/e88e05709ad0f635",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-c-g/e88e05709ad0f635",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-c-g",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_server_blue",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-s-b/dd3aa6b30c820812",
            "arn_suffix": "targetgroup/tg-dev-s-b/dd3aa6b30c820812",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/status",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-s-b/dd3aa6b30c820812",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-s-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_server_green",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-s-g/386b92dd6ec6ff7e",
            "arn_suffix": "targetgroup/tg-dev-s-g/386b92dd6ec6ff7e",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/status",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-dev-s-g/386b92dd6ec6ff7e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-s-g",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0443ee53ac2366737"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}